# peovim

./: .codemap.md  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  pyproject.toml  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
notes/: api.md  architecture.md  developer_guide.md  getting_started.md  keys.md  logging.md  native_renderer.md  plugins.md  python_overview.md  roadmap.md  user_guide.md  vim_compatibility.md
notes/plugins/: codemap.md
notes/research/: plugin_api_survey.md
peovim/: api.py  main.py
peovim/_native/: __init__.py  cell_grid.pyx  window_renderer.pyx
peovim/api/: __init__.py  _metadata.py  buffer_api.py  commands_api.py  completion_api.py  debug_api.py  diagnostics_api.py  diff_api.py  editor.py  events_api.py  git_api.py  health_api.py  jumplist_api.py  keymap_api.py  lsp_api.py  modal_api.py  options_api.py  quickfix_api.py  registers_api.py  repl_api.py  session_api.py  snippets_api.py  store_api.py  syntax_api.py  testing_api.py  ui_api.py  window_api.py  workspace_api.py
peovim/commands/: builtin.py  parser.py  registry.py
peovim/config/: editorconfig.py  loader.py  project.py
peovim/core/: buffer.py  cursor.py  decorations_store.py  diffing.py  document.py  editor_state.py  event_bus.py  filetype.py  fold.py  health.py  health_checks.py  history.py  jumplist.py  log_manager.py  marks.py  options.py  persistence.py  persistence_policy.py  recovery.py  registers.py  search.py  shada.py  sign_registry.py  snapshot.py  store_api.py  style.py  text_edits.py  transaction.py  window.py  workspace.py
peovim/debug/: client.py  profile_workloads.py  protocol.py  session.py
peovim/git/: __init__.py  presentation.py  repository.py
peovim/lsp/: client.py  features.py  manager.py  protocol.py
peovim/modal/: actions.py  dispatcher.py  dispatcher_buffers.py  dispatcher_clipboard.py  dispatcher_commands.py  dispatcher_ex_commands.py  dispatcher_folds.py  dispatcher_modes.py  dispatcher_navigation.py  dispatcher_plugins.py  dispatcher_repeat.py  dispatcher_search.py  dispatcher_text.py  dispatcher_workspace.py  engine.py  keybindings.py  motions.py  operators.py  text_objects.py
peovim/plugins/: ai.py  align.py  autopairs.py  calltree.py  codemap.py  commentary.py  compare.py  (+40 more)
tests/: conftest.py  test_api.py  test_backend_crossterm.py  test_backend_factory.py  test_backend_prompt_toolkit.py  test_bottom_panel.py  test_buffer.py  test_commands.py  test_config_loader.py  test_core_diffing.py  test_cursor.py  test_decorations_store.py  test_dispatcher_buffers.py  test_dispatcher_commands.py  test_dispatcher_navigation.py  test_dispatcher_plugins.py  test_dispatcher_postprocessing.py  test_docs.py  test_document.py  test_event_bus.py  test_event_loop_cmdline.py  test_external_file_changes.py  test_folding.py  test_git_api.py  test_health.py  test_indent_guides.py  test_integration.py  test_jumplist.py  test_layout.py  test_log_manager.py  test_lsp.py  test_markdown.py  test_marks.py  test_modal.py  test_motions.py  test_mouse.py  test_mutation_safety.py  test_operators.py  test_options.py  test_persistence.py  (+49 more)
(+55 files in other folders)
